--- a/projeto-finans/index.html
+++ b/projeto-finans/index.html
@@ -13,90 +13,164 @@
       <nav class="navbar navbar-expand-sm navbar-light bg-warning">
         <div class="container">
           <a href="#" class="navbar-brand">
-            <img src="img/logo.png"r width="142" alt="logo">
+            <img src="img/logo.png" width="142">
           </a>
 
-            <button class="navbar-toggler" data-toggle="collapse" data-target="">
-              <span class="navbar-toggler-icon"></span>
-            </button>
+          <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-            <div class="collapse navbar-collapse" id="nav-principal">
-              <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                  <a href="#" class="nav-link">Home</a>
-                </li>
-
-                <li class="nav-item">
-                  <a href="#" class="nav-link">Recursos</a>
-                </li>
-
-                <li class="nav-item">
-                  <a href="#" class="nav-link">Benefícios</a>
-                </li>
-
-                <li class="nav-item">
-                  <a href="#" class="nav-link">Preços</a>
-                </li>
-
-                <li class="nav-item">
-                  <a href="#" class="btn btn-outline-light ml-4">Entrar</a>
-                </li>
-              </ul>
-            </div>
+          <div class="collapse navbar-collapse" id="nav-principal">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a href="" class="nav-link">Home</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link">Recursos</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link">Benefícios</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link">Preços</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="btn btn-outline-light ml-4">Entrar</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </nav>
-    </header>
+    </header><!--/fim Cabecalho -->
 
-    <section id="home">
+    <section id="home"><!-- Início seção home -->
       <div class="container">
         <div class="row">
-          <div class="col-md-6 d-flex">
+          <div class="col-md-6 d-flex"><!-- Textos da seção -->
             <div class="align-self-center">
-              <h1 class="display-4">Suas contas descomplicadas</h1>
-              <p>Usado por mais de 1 milhão de pessoas, o Finans dá aquele gostinho de gerência financeira pessoal.</p>
-              <form class="mt-4">
-                <div class="input-group">
-                  <input type="email" class="form-control" placeholder="Ex.: nome@exemplo.com">
+              <h1 class="display-4">Suas contas, descomplicadas</h1>
+              <p>
+                Usado por mais de 1 milhão de pessoas, o Finans é uma ferramenta online que vai facilitar sua vida financeira.
+              </p>
+              <form class="mt-4 mb-4">
+                <div class="input-group input-group-lg">
+                  <input type="text" placeholder="Seu e-mail" class="form-control">
                   <div class="input-group-append">
                     <button type="button" class="btn btn-primary">Cadastre-se</button>
                   </div>
                 </div>
               </form>
-              <br>
-              <p>Disponível para 
-                <a href="#" class="btn btn-outline-light">
+              <p>Disponível para
+                <a href="" class="btn btn-outline-light">
                   <i class="fab fa-android fa-lg"></i>
-                </a> 
-              <a href="#" class="btn btn-outline-light">
-                <i class="fab fa-apple fa-lg"></i>
-              </a>
+                </a>
+                <a href="" class="btn btn-outline-light">
+                  <i class="fab fa-apple"></i>
+                </a>
               </p>
             </div>
-          </div> <!-- fim textos topo -->
+          </div><!--/fim textos da seção -->
           <div class="col-md-6 d-none d-md-block">
-            <img src="img/capa-mulher.png" alt="mulher">
+            <img src="img/capa-mulher.png">
           </div>
         </div>
       </div>
-    </section> <!-- fim seção topo -->
-    <section><!-- início seção conteúdo -->
+    </section><!--/fim seção home -->
+
+    <section class="caixa"><!--/Início seção saiba -->
       <div class="container">
         <div class="row">
           <div class="col-md-6 d-flex">
             <div class="align-self-center">
               <h2>Saiba para onde vai o seu dinheiro</h2>
-              <p>Com o Finans, você categoriza todos os seus lançamentos. Com gráficos simples, você sabe de onde vai o seu dinheiro.</p>
-              <a href="#" class="btn btn-primary">Veja mais</a>
+              <p>
+                Com o Finans, você categoriza todos os seus lançamentos. Com gráficos simples, você sabe de onde vem e para onde vai o seu dinheiro.
+              </p>
+              <a href="" class="btn btn-primary">Veja mais</a>
             </div>
           </div>
-
           <div class="col-md-6">
             <img src="img/saiba.png" class="img-fluid">
           </div>
         </div>
       </div>
-    </section><!-- fim seção conteúdo -->
+    </section><!--/FIM seção saiba -->
 
+    <section class="caixa"><!--/Início seção juros -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <img src="img/juros.png" class="img-fluid">
+          </div>
+          <div class="col-md-6 d-flex">
+            <div class="align-self-center">
+              <h2>Pare de pagar juros e economize</h2>
+              <p>
+                Manter as contas em dia é sempre um problema? O Finans avisa você: receba alertas de contas a pagar e a receber!
+              </p>
+              <a href="" class="btn btn-primary">Veja mais</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section><!--/FIM seção juros -->
+
+    <section class="caixa"><!--/Início seção recursos -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <img src="img/facil.png" class="img-fluid">
+            <h4>Fácil de usar</h4>
+            <p>
+              O Finans vai além do básico e permite que você faça controles incríveis, essenciais para suas finanças. Simples como tem que ser!
+            </p>
+          </div>
+          <div class="col-md-4">
+            <img src="img/economize.png" class="img-fluid">
+            <h4>Economize seu tempo</h4>
+            <p>
+              Tempo é dinheiro! Em segundos, você tem tudo sob controle e aproveite seu tempo com o que realmente importa pra você!
+            </p>
+          </div>
+          <div class="col-md-4">
+            <img src="img/suporte.png" class="img-fluid">
+            <h4>Suporte amigo</h4>
+            <p>
+              Dúvidas? Perguntas? Nosso suporte super legal ajuda você! A gente tá aqui pra resolver seus problemas e deixar sua vida bem mais fácil!
+            </p>
+          </div>
+        </div>
+      </div>
+    </section><!--/FIM seção recursos -->
+
+    <footer class="mt-4 mb-4"> <!--/Início rodapé -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+            <p>
+              <a href="">Home</a>
+              <a href="">Recursos</a>
+              <a href="">Benefícios</a>
+              <a href="">Preços</a>
+            </p>
+          </div>
+          <div class="col-md-4 d-flex justify-content-end">
+            <a href="" class="btn btn-outline-dark">
+              <i class="fab fa-facebook"></i>
+            </a>
+            <a href="" class="btn btn-outline-dark ml-2">
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a href="" class="btn btn-outline-dark ml-2">
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a href="" class="btn btn-outline-dark ml-2">
+              <i class="fab fa-youtube"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer> <!--/FIM rodapé -->
 
 
     <!-- JavaScript (Opcional) -->
