--- a/javascript/scripts-iniciais/funcoes.html
+++ b/javascript/scripts-iniciais/funcoes.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript</title>
     <script>
-        // Function Void|
-        // Function Return|
+        // function Void|
+        // function Return|
 
+        // function Normal
         let Largura = prompt('Digite a largura do terreno')
         let comprimento = prompt('Digite o comprimento do terreno')
 
@@ -16,10 +17,249 @@
         document.write('O terreno possui ' + area + ' m²')
         
         function calcularAreaTerreno (Largura, comprimento ) {
-            // Variável
+            // variável
             let area = Largura * comprimento
             return area
         }
+
+        document.write('<hr>')
+
+        // functions com variáveis
+        function soma() {
+            let resultado = 0
+            for (let i in arguments) {
+                resultado += arguments[i]
+            }
+            return resultado
+            }
+
+        console.log(soma(7, 6, 7.6, 0.967, 'texto'))
+
+        document.write('<hr>')
+
+        // function anônima
+        let nomeUsuario = prompt('Digite seu 1º nome:')
+        let sobrenomeUsuario = prompt('Digite seu sobrenome:')
+
+        let exibirSaudacao = function (nome) {
+            document.write('Olá ' + nome + ', tudo bem?')
+        }
+
+        // function callback
+        function exibirArtigo(id, callbackSucesso, callbackErro){
+      //lógica: recuperar o id via requisição HTTP
+        if(true){
+            callbackSucesso('Funções de callback em JS', 'Funções de callback são muitas utilizadas....')
+        } else {
+            callbackErro('Erro ao recuperar os dados')
+            }
+        }
+
+        let callbackSucesso = function(titulo, descricao){
+            document.write('<h1>' + titulo + '</h1>')
+            document.write('<hr>')
+            document.write('<p>' + descricao + '</p>')  
+        }
+
+        let callbackErro = function(erro){
+            document.write('<p><strong>Erro: </strong>' + erro + '</p>')
+        }
+
+        exibirArtigo(1, callbackSucesso, callbackErro)
+
+            exibirSaudacao(nomeUsuario)
+
+            document.write('<hr>')
+
+        // métodos de function
+
+            // métodos de function string
+            let nome = ' Flávio Freires Pomin '
+
+                // string
+                document.write(nome)
+
+                document.write('<br><br>')
+
+                // propriedade length
+                document.write(nome.length)
+
+                document.write('<br><br>')
+
+                // método charAt()
+                document.write(nome.charAt(6))
+
+                document.write('<br><br>')
+
+                // método indexOf()
+                document.write(nome.indexOf('n'))
+
+                document.write('<br><br>')
+
+                // método replace()
+                document.write(nome.replace('Flávio Freires Pomin', 'Silvio Santos'))
+
+                document.write('<br><br>')
+
+                // método substr()
+                document.write(nome.substr(0, 7))
+
+                document.write('<br><br>')
+
+                // método toLowerCase()
+                document.write(nome.toLowerCase())
+
+                document.write('<br><br>')
+
+                // método toUpperCase()
+                document.write(nome.toUpperCase())
+
+                document.write('<br><br>')
+
+                // método trim()
+                document.write('-' + nome.trim() + '- disse ele.')
+
+            document.write('<hr>')
+
+            // métodos de functions matemáticas
+            let x = 10.380
+
+                // arredondamento para número superior
+                x = Math.ceil(10.380)
+                document.write(x)
+
+                document.write('<br><br>')
+
+                // arredondamento para número inferior
+                x = Math.floor(10.380)
+                document.write(x)
+
+                document.write('<br><br>')
+
+                // arredondamento neutro
+                x = Math.round(10.580)
+                document.write(x)
+
+                document.write('<br><br>')
+
+                // ramdomização entre 0 e 1 inteiros
+                x = Math.random()
+                document.write(x)
+
+            document.write('<hr>')
+
+            // métodos de datas de functions
+            let data = new Date()
+
+                // getDate() retorna o dia do mês
+                document.write(data.getDate())
+
+                document.write('/')
+
+                // getMonth() retorna o mês
+                document.write(data.getMonth() + 1)
+
+                document.write('/')
+
+                // getFullYear() retorna o ano
+                document.write(data.getFullYear())
+
+                document.write('<hr>')
+
+                // getHours() retorna as horas
+                document.write(data.getHours())
+
+                document.write(':')
+
+                // getMinutes() retorna os minutos
+                document.write(data.getMinutes())
+
+                document.write(' ')
+
+                // getSeconds() retorna os segundos
+                document.write(data.getSeconds())
+
+                document.write('.')
+
+                // getMilliseconds() retorna os milissegundos
+                document.write(data.getMilliseconds())
+
+                document.write('<hr>')
+
+                document.write(data.toString() + '<br><br>')
+
+                // adicionar dias
+                data.setDate(data.getDate() + 4)
+                document.write(data.toString())
+
+                document.write('<br><br>')
+
+                // remover dias
+                data.setDate(data.getDate() -6)
+                document.write(data.toString())
+
+                document.write('<hr>')
+
+                // adicionar meses
+                data.setMonth(data.getMonth() +6)
+                document.write(data.toString())
+
+                document.write('<br><br>')
+
+                // remover meses
+                data.setMonth(data.getMonth() -4)
+                document.write(data.toString())
+
+                document.write('<hr>')
+
+                // adicionar anos
+                data.setFullYear(data.getFullYear() +15)
+                document.write(data.toString())
+
+                document.write('<br><br>')
+
+                // remover anos
+                data.setFullYear(data.getFullYear() -12)
+                document.write(data.toString())
+
+            document.write('<hr>')
+
+            // 16/06/2006
+            let data1 = new Date(2006, 7, 16)
+            document.write(data1.toString())
+
+            document.write('<br><br>')
+
+            // 08/09/2023
+            let data2 = new Date(2023, 8, 8)
+            document.write(data2.toString())
+
+            document.write('<hr>')
+
+            //conversão das datas para calcular
+
+            document.write(data1.getTime())
+
+            document.write('<br><br>')
+
+            document.write(data2.getTime())
+
+            document.write('<hr>')
+
+            // calculo para achar a qtd de milissegundos entre a data1 e a data2
+            let milissegundos_entre_datas = Math.abs(data1.getTime() - data2.getTime())
+            document.write(milissegundos_entre_datas)
+
+            document.write('<br><br>')
+
+            // quantidade de milissegundos em 1 dia
+            let milissegundos_por_dia = 1 * 24 * 60 * 60 * 1000
+            document.write('1 dia tem: ' + milissegundos_por_dia + ' milissegundos.')
+
+            document.write('<hr>')
+
+            // calculo de quantos dias entre data1 e data2 (arredondado)
+            document.write('A diferença entre data1 e data2 é de:' + Math.round(milissegundos_entre_datas / milissegundos_por_dia) + ' dias.')
     </script>
 </head>
 <body>
